--- a/assets/css/menu-princ.css
+++ b/assets/css/menu-princ.css
@@ -54,3 +54,44 @@ header .h-wrapper {
 
   opacity: 0.2;
 }
+
+/*Itens para compra*/
+
+.b-container {
+  position: absolute;
+  height: fit-content;
+  width: 60%;
+  margin-top: 10rem;
+  margin-left: 20%;
+  margin-right: 20%;
+  background-color: rgb(92, 25, 25);
+  font-size: 2rem;
+  padding: 4rem;
+}
+.topics-images {
+  position: absolute;
+  height: fit-content;
+  width: 20%;
+  margin-top: 10rem;
+  margin-left: 3rem;
+}
+.products-grid {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 14% 63% 15%;
+  gap: 4%;
+}
+
+.buy1 {
+  width: 10rem;
+  height: 5rem;
+  border-radius: 10%;
+  background: white;
+  border: 3px solid green;
+  color: green;
+}
+
+.buy1:hover {
+  background: green;
+  color: white;
+}
