--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,3 +7,20 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background: rgb(0, 0, 0)
+}
+
+::-webkit-scrollbar-thumb{
+  background: rgb(63, 63, 63);
+}
+
+.genericButton{
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
