--- a/assets/css/menu-princ.css
+++ b/assets/css/menu-princ.css
@@ -28,9 +28,15 @@ nav .h-logo img {
 }
 
 nav .h-itens ul {
-  margin-right: 1rem;
+  margin-right: 2rem;
   display: flex;
   gap: 2rem;
+}
+
+nav .h-itens {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav .h-itens a {
@@ -41,20 +47,72 @@ nav .h-itens a:hover {
   color: red;
 }
 
+.h-bar-line {
+  background-color: rgb(63, 63, 63);
+  width: 0.2rem;
+  height: 5rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: -1rem;
+}
+
+nav .h-buy-cart a {
+  margin: 1rem;
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+nav .h-buy-cart a icon {
+  position: relative;
+  display: block;
+  line-height: 7.5rem;
+  text-align: center;
+}
+
 /*Wrapper*/
 
-header .h-wrapper {
+.h-wrapper {
   height: 100vh;
   background-color: rgb(46, 36, 36);
+}
+
+.h-wrapper-container {
+  height: 50rem;
+  width: 50rem;
+  border: 2px solid white;
+  margin-left: 5rem;
+
 }
 
 .h-wrapper .h-wrapper-image img{
   height: 100%;
   width: 100%;
+  position: absolute;
 
   opacity: 0.2;
 }
 
+/*Main*/
+main .background-image-main {
+  height: 100vh;
+  background-color: rgb(46, 36, 36);
+  position:absolute;
+
+}
+
+main .background-image-main img { 
+  height: 100vh;;
+  width: 99.3vw;
+  opacity: 0.2;
+}
 /*Itens para compra*/
 
 .b-container {
@@ -80,6 +138,10 @@ header .h-wrapper {
   grid-auto-flow: column;
   grid-template-columns: 14% 63% 15%;
   gap: 4%;
+}
+
+.products-grid .title-game {
+  text-align: center;
 }
 
 .buy1 {
