Add news divs in index.html and more one div for media-video

--- a/assets/css/menu-princ.css
+++ b/assets/css/menu-princ.css
@@ -85,10 +85,14 @@ nav .h-buy-cart a icon {
 }
 
 .h-wrapper-container {
-  height: 50rem;
-  width: 50rem;
-  border: 2px solid white;
-  margin-left: 5rem;
+  position: absolute;
+  top: -7rem;
+  margin: 37rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
 }
 
